# spatio-flux

./: .gitignore  README.md  devenv.nix  pyproject.toml  setup.py
demo/: build_comets.html  build_comets.ipynb  build_comets_marimo.py  comets.ipynb  particle_comets.ipynb
plot/: fields.py  particles.py  plot.py
processes/: __init__.py  comets.py  comets_dfba_particles.py  dfba.py  diffusion_advection.py  particle_comets.py  particles.py  particles_motion.py  spatial_dfba.py
report/: br_particles_dfba.json  br_particles_dfba_schema.json  br_particles_dfba_state.json  br_particles_dfba_viz  br_particles_kinetics.json  br_particles_kinetics_schema.json  br_particles_kinetics_state.json  br_particles_kinetics_viz  brownian_particles.json  brownian_particles_schema.json  brownian_particles_state.json  brownian_particles_viz  cdiff_dfba.json  cdiff_dfba_viz  comets.json  comets_br_particles_dfba.json  comets_br_particles_dfba_schema.json  comets_br_particles_dfba_state.json  comets_br_particles_dfba_viz  comets_br_particles_kinetics.json  comets_br_particles_kinetics_schema.json  comets_br_particles_kinetics_state.json  comets_br_particles_kinetics_viz  comets_diffusion.json  comets_diffusion_schema.json  comets_diffusion_state.json  comets_diffusion_viz  comets_nt_particles_dfba.json  comets_nt_particles_dfba_schema.json  comets_nt_particles_dfba_state.json  comets_nt_particles_dfba_viz  comets_schema.json  comets_schema.txt  comets_viz  community_dfba.json  community_dfba_schema.json  community_dfba_state.json  community_dfba_viz  dfba_kinetics_community.json  (+98 more)
(+40 files in other folders)
