[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatio-flux"
version = "0.0.1"
description = "A demonstration of process composition rebuilding and extending COMETS by composing functional components"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bigraph-schema",
    "process-bigraph",
    "matplotlib",
    "bigraph-viz",
    "vivarium-interface",
    "scipy",
    "cobra",
    "imageio",
    "pytest",
    "pymunk",
]

# Optional/dev dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "build",
]

# Make sure all subpackages are included
[tool.setuptools.packages.find]
where = ["."]
include = ["spatio_flux*"]
exclude = ["tests*", "docs*"]
